--- a/index.html
+++ b/index.html
@@ -54,32 +54,7 @@
 }
 
 
-.featured-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-left: 2%;
-}
 
-.featured-header h3 {
-  font-size: 2rem;
-  margin-bottom: 0;
-}
-
-.featured-buttons {
-  margin-left: auto; 
-  margin-right: 2%;
-  display: flex;
-  gap: 0.5rem;
-}
-
-.featured-header button {
-  width: 40px;
-  height: 40px;
-  font-size: 1rem;
-}
-  
 
 
 .scroll-container {
@@ -198,38 +173,7 @@
   .navbar-nav {
     text-align: start;
   }
-  .featured-header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-    margin-left: .5rem;
 
-  }
-
-  .featured-header h3 {
-    padding-left: 8%;
-    font-size: 1.6rem;
-    text-align: left;
-    width: 100%;  
-  }
-
-  .featured-header span {
-    display: block;
-    font-size: 1.2rem;
-  }
-  .featured-buttons {
-    margin-left: auto; 
-    display: flex;
-    gap: 0.5rem;
-  }
-
-  .featured-header button {
-    width: 32px;
-    height: 32px;
-    font-size: 0.8rem;
-    
-
-  }
 .showcase-box {
     border-radius: 0;
     max-height: 300px;
@@ -510,20 +454,22 @@
   </div>
 </div>
 
-<div class="featured-header d-flex align-items-center mb-3 flex-wrap">
-  <h3 class="fw-bold ms-2 mb-3">
-    Featured <span style="color:navy">Collections</span>
-  </h3>
-  <div class="featured-buttons d-flex">
-    <button class="btn btn-light rounded-circle shadow me-2">
-      <i class="fas fa-chevron-left"></i>
-    </button>
-    <button class="btn btn-light rounded-circle shadow">
-      <i class="fas fa-chevron-right"></i>
-    </button>
+
+
+<div class="container mt-4 pb-4 pt-5">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h5 class="mb-0 fs-4 fw-bold">Featured <span style="color: rgb(13, 13, 86);">Collections</span></h5>
+
+    <div>
+      <button class="btn btn-light rounded-circle shadow me-2">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+      <button class="btn btn-light rounded-circle shadow">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+    </div>
   </div>
 </div>
-
 
 
 <div class="container-fluid mt-5">
