--- a/login.html
+++ b/login.html
@@ -37,9 +37,10 @@
         
 @media (max-width: 768px) {
   .leftside {
+    margin: 0;
     height: 250px;
     border-radius: 0;
-        background-position: top center;
+    background-position: top center;
   }
   .right{
      margin-top: 10px;
