--- a/payemnt.html
+++ b/payemnt.html
@@ -206,7 +206,7 @@
   <form>
     <div class="form-check d-flex align-items-center justify-content-between mb-2">
       <div class="d-flex align-items-center">
-        <img src="/images/google-pay-icon 1.png"  style="height: 10px; width: 10px;">
+        <img src="./images/google-pay-icon 1.png"  style="height: 20px; width: 20px;">
         <label class="form-check-label ms-2 mb-0">Google Pay</label>
       </div>
       <input class="form-check-input" type="radio" name="payment" checked>
